# makair-control-ui

./: Cargo.nix  Cargo.toml  README.md  build.rs  default.nix
.github/workflows/: build.yml  control-lint.yml
doc/designs/: Control UI.sketch
doc/system/: README.md
doc/system/boot/: cmdline.txt  config.txt
doc/system/etc/: makair-env
doc/system/etc/pam.d/: cage
doc/system/etc/polkit-1/rules.d/: service-auth.rules
doc/system/etc/systemd/system/: cage@.service  makair-setup.service
doc/system/etc/udev/rules.d/: 99-makair-data-logging.rules  99-makair.rules
doc/system/etc/udevil/: udevil.conf
doc/system/home/alarm/development/: update.sh
doc/textures/: Header Texture.sketch  Patient Textures.sketch
nix/: nixpkgs.nix  wayland-protocols-0.21.13-0001-patch.patch  wayland-protocols-0.23.6-0001-patch.patch  wayland-protocols-0.23.6-0002-patch.patch
res/fonts/default/: notosans_bold.ttf.zz  notosans_regular.ttf.zz
res/locales/: de.ftl  en.ftl  es.ftl  fr.ftl  it.ftl  lv.ftl  pt.ftl  ru.ftl  uk.ftl  zh.ftl
scripts/: PKGBUILD  release_binaries.sh
src/: main.rs
src/chip/: macros.rs  mod.rs
src/chip/settings/: advanced.rs  cycles.rs  end_of_line.rs  expiration_term.rs  macros.rs  mod.rs  mode.rs  preset.rs  pressure.rs  run.rs  snooze.rs  trigger.rs  trigger_inspiratory.rs
src/config/: arguments.rs  context.rs  environment.rs  logger.rs  mod.rs  settings.rs
src/data/: mod.rs  poller.rs  simulator.rs
src/display/: data.rs  drawer.rs  events.rs  fonts.rs  graph.rs  identifiers.rs  images.rs  macros.rs  mod.rs  renderer.rs  screen.rs  support.rs  utilities.rs  widget.rs  widgets.rs  window.rs
src/locale/: accessor.rs  advanced.rs  alarms.rs  end_of_line.rs  error.rs  loader.rs  locales.rs  macros.rs  mod.rs  modes.rs  preset.rs
src/lora/: controller.rs  mod.rs
src/physics/: mod.rs  pressure.rs
src/serial/: handler.rs  mod.rs  poller.rs
src/test_strategies/: mod.rs
src/utilities/: battery.rs  image.rs  index.rs  macros.rs  mod.rs  parse.rs  pressure.rs  types.rs  units.rs
src/widget/: advanced_settings.rs  alarm.rs  alarms.rs  background.rs  branding.rs  controls.rs  cycles_settings.rs  end_of_line.rs  error.rs  expiration_ratio_settings.rs  expiration_term_settings.rs  graph.rs  heartbeat.rs  initializing.rs  layout.rs  macros.rs  mod.rs  modal.rs  mode_overview.rs  mode_settings.rs  no_data.rs  preset_settings.rs  pressure_settings.rs  run_settings.rs  snooze_settings.rs  status.rs  stop.rs  telemetry_container.rs  telemetry_view.rs  trigger_overview.rs  trigger_settings.rs
