[package]
name = "makair-control"
version = "2.4.0"
description = "Control UI for the MakAir open source ventilator."
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"
homepage = "https://github.com/makers-for-life/makair"
repository = "https://github.com/makers-for-life/makair-control-ui"
keywords = ["covid-19", "fusion-360", "cad", "covid", "coronavirus", "sars-cov-2", "nucleo-board", "covid-respirator", "makair-respirators", "medical", "ards"]
categories = ["gui", "hardware-support"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>", "Quentin Adam <quentin.adam@waxzce.org>", "David Sferruzza <david.sferruzza@gmail.com>"]

[[bin]]
name = "makair-control"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4"
clap = { version = "2.33", default-features = false }
confy = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"
rust-embed = { version = "6.2", default-features = false, features = ["compression", "debug-embed"] }
chrono = { version = "0.4", default-features = false }
fluent = "0.16"
intl-memoizer = "0.5"
unic-langid = "0.9"
inflate = "0.4"
winit = "0.25"
image = { version = "0.23", default-features = false, features = ["png"] }
glium = "0.30"
plotters = { version = "0.3", default_features = false, features = ["chrono", "area_series"] }
plotters-conrod = { git = "https://github.com/dsferruzza/plotters-conrod", branch = "conrod0.71-glium0.28-winit0.23" }
conrod_glium = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
conrod_winit = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
conrod_core = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
sysfs_gpio = { version = "0.6", optional = true }
rn2903 = { git = "https://github.com/waxzce/lora-rust-rn2903-rn2483.git", rev = "b086057ba096920abef3870ad0cefa2c80a343e2", optional = true }
makair-telemetry = { git = "https://github.com/makers-for-life/makair-telemetry", rev = "184185d4301fa7343018cd6733e1fb23e2cb032e", default-features = false }
makair-simulator = { git = "https://github.com/makers-for-life/makair-simulator", rev = "6a5ea65e65f5919cade4417d1612fe2a0f4db485", optional = true }

[features]
default = ["serial"]
fonts-cjk = []
lora = ["rn2903", "sysfs_gpio"]
serial = ["makair-telemetry/serial"]
simulator = ["makair-simulator"]

[profile.release]
lto = true
codegen-units = 1
