[package]
name = "makair-control-ui"
version = "2.4.0"
description = "Control UI for the MakAir open source ventilator."
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"
homepage = "https://github.com/makers-for-life/makair"
repository = "https://github.com/makers-for-life/makair-control-ui"
keywords = ["covid-19", "fusion-360", "cad", "covid", "coronavirus", "sars-cov-2", "nucleo-board", "covid-respirator", "makair-respirators", "medical", "ards"]
categories = ["gui", "hardware-support"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>", "Quentin Adam <quentin.adam@waxzce.org>", "David Sferruzza <david.sferruzza@gmail.com>"]

[[bin]]
name = "makair-control"
path = "src/main.rs"
doc = false

[dependencies]
log = "0.4"
clap = { version = "2.33", default-features = false }
confy = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
paste = "1.0"
rust-embed = { version = "6.2", default-features = false, features = ["compression", "debug-embed"] }
chrono = { version = "0.4", default-features = false }
fluent = "0.16"
intl-memoizer = "0.5"
unic-langid = "0.9"
inflate = "0.4"
winit = "0.25"
image = { version = "0.23", default-features = false, features = ["png"] }
glium = "0.30"
plotters = { version = "0.3", default_features = false, features = ["chrono", "area_series"] }
plotters-conrod = { git = "https://github.com/dsferruzza/plotters-conrod", branch = "conrod0.71-glium0.28-winit0.23" }
conrod_glium = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
conrod_winit = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
conrod_core = { git = "https://github.com/dsferruzza/conrod", branch = "update-glium-winit" }
sysfs_gpio = { version = "0.6", optional = true }
rn2903 = { git = "https://github.com/waxzce/lora-rust-rn2903-rn2483.git", rev = "b086057ba096920abef3870ad0cefa2c80a343e2", optional = true }
makair-telemetry = { git = "https://github.com/makers-for-life/makair-telemetry", rev = "72e9bf31a9baa5f2ef143bdc313bf5124a5223e2", default-features = false }
makair-simulator = { git = "https://github.com/makers-for-life/makair-simulator", rev = "0b91e1b6fd5740ea3cb379cc16f71d701ce66166", optional = true }

[build-dependencies]
winres = { git = "https://github.com/Skirmisher/winres", rev = "7333e0ff201d25eaaa70352682cd1a37614f93f4" } # https://github.com/mxre/winres/pull/36 is required

[package.metadata.winres]
ProductName = "MakAir Control UI"
CompanyName = "Makers For Life"
LegalCopyright = "Copyright © 2020, Makers For Life"

[features]
default = ["serial"]
fonts-cjk = []
lora = ["rn2903", "sysfs_gpio"]
serial = ["makair-telemetry/serial"]
simulator = ["makair-simulator"]

[profile.release]
lto = true
codegen-units = 1
